--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "pandas>=2.2.3",
 ]
+
+[tool.poetry.dependencies]
+Flask-Login = "^0.6.3"
+Flask-SQLAlchemy = "^3.1.1"
