--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [project]
 name = "word-quiz"
 version = "0.1.0"
-description = "Add your description here"
+description = "Flask word quiz app"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pandas>=2.2.3",
+    "Flask-Login>=0.6.3",
+    "Flask-SQLAlchemy>=3.1.1"
 ]
+# ここが重要！単体モジュール app.py を指定
+py-modules = ["app"]
 
-[tool.poetry.dependencies]
-Flask-Login = "^0.6.3"
-Flask-SQLAlchemy = "^3.1.1"
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
