--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "pandas>=2.2.3",
     "Flask-Login>=0.6.3",
-    "Flask-SQLAlchemy>=3.1.1"
+    "Flask-SQLAlchemy>=3.1.1",
+    "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.1.0",
 ]
 
 [tool.setuptools]
