--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "requests>=2.32.3",
     "google>=3.0.0",
     "google-genai>=1.14.0",
+    "gunicorn>=23.0.0",
 ]
 
 [tool.setuptools]
